docs: added Javadoc